# SimpleBackup

./: Cargo.toml  README.md  build.rs
.github/workflows/: mac.yml  ubuntu.yml  winodows.yml
resources/: SimpleBackup_config.yml  config.yml
src/: main.rs
